# podping.cloud

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  explanaing_hive.md  overviewandpurpose.md  requirements.txt
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yaml  multi-arch-builder.sh  multi-arch-builder.txt
docs/: gossip-canary-runbook.md
docs/superpowers/plans/: 2026-07-21-github-actions-ci-release.md
docs/superpowers/specs/: 2026-07-21-github-actions-ci-release-design.md
examples/: podping_watcher.php  shell_script_ping.sh
hive-watcher/: async-watcher.py  config.py  hive-rc-watcher.py  hive-watcher.py  monitor-accounts.py  pyproject.toml  simple-watcher.py  test.sh  watcher.py
hive-watcher-js/: hive-watcher.js  index.html
hive-watcher/config/: __init__.py  config.py
hive-watcher/examples/out-as-csv/: .README.md.swp  .Rhistory  README.md  create_data.csv.py  data.csv  example-output-data.csv  hive-watcher-simple.py  hive-watcher.py  image-timestamp_delay.ps  run_watcher.sh  visualize-data.R
hive-watcher/examples/out-as-csv/stats/: summaryStats.ndjson
hive-watcher/examples/write-to-csv-analyze-with-R/: README.md  visualize-data.R
hive-watcher/examples/write-to-csv-analyze-with-R/stats/: summaryStats.ndjson
hive-watcher/examples/write-to-file-analyze-with-R/: .Rhistory  README.md  data-not-podping_firehose.csv  data.csv  hive-watcher-write-to-feather.py  visualize-data.R
hive-watcher/examples/write-to-file-analyze-with-R/stats/: summaryStats.ndjson
hive-watcher/logs/: readme.md
hive-writer/: hive-writer-test.py  hive-writer.py
hive-writer/config/: __init__.py
podping/: .gitignore  Cargo.toml  auth.db  build.rs  home.html  queue.db
podping/databases/: auth.db  queue.db
podping/dbif/: Cargo.toml
podping/dbif/src/: lib.rs
podping/plexo-schemas/built/dev/plexo/: plexo_message_capnp.rs
podping/plexo-schemas/schema/dev/plexo/: plexo_message.capnp
podping/podping-schemas/built/org/podcastindex/podping/: podping_capnp.rs  podping_medium_capnp.rs  podping_reason_capnp.rs  podping_write_capnp.rs  podping_write_error_capnp.rs
podping/podping-schemas/built/org/podcastindex/podping/hivewriter/: podping_hive_transaction_capnp.rs  podping_hive_write_capnp.rs  podping_medium_capnp.rs  podping_reason_capnp.rs  podping_write_capnp.rs  podping_write_error_capnp.rs
podping/podping-schemas/schema/org/podcastindex/podping/: podping.capnp  podping.json  podping_medium.capnp  podping_reason.capnp  podping_write_error.capnp
podping/podping-schemas/schema/org/podcastindex/podping/hivewriter/: podping_hive_transaction.capnp  podping_hive_write.capnp  podping_medium.capnp  podping_reason.capnp  podping_write.capnp
podping/src/: handler.rs  main.rs  router.rs
stresser/: Cargo.toml  urls.txt
stresser/src/: main.rs
