[tool.poetry]
name = "hive-watcher"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyzmq = "^22.1.0"
lighthive = {git = "ssh://git@github.com/agates/lighthive.git", rev = "d63d553ab1c0b3f6b0333fa0796b365de7b07bc9"}
pendulum = "^2.1.2"
beem = "^0.24.26"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
multi_line_output = 3
