[tool.poetry]
name = "hive-watcher"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
lighthive = "0.4.0"
python = "^3.8"
pyzmq = "^24.0.0"
pendulum = "^2.1.2"
beem = "^0.24.26"

[tool.poetry.dev-dependencies]
black = "^22.0.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3
