[package]
name = "podping"
version = "0.1.2-dev"
authors = ["Dave Jones"]
edition = "2021"
build = "build.rs"

[build-dependencies]
capnpc = "0.14"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"
url = "2.2.1"
rusqlite = "0.25.1"
zmq = "0.10"
drop-root = "0.1.1"
percent-encoding = "2.1.0"
capnp = "0.14"